# mcpskill

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/skills/mcp-orchestrator/: .env.example  .gitignore  README.md  SKILL.md  config.example.yaml  orchestrate.py  test-config.yaml
src/mcpskill/: __init__.py  client.py  config.py  executor.py  types.py
